--- a/style.css
+++ b/style.css
@@ -47,6 +47,9 @@ body {
     vertical-align: bottom;
 }
 
+.main div.table {
+    padding: 2%;
+}
 
 .main div.table table{
     background-color: #F5564E; 
