--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body {
 }
 
 .main {
-    background-color: #34A7B2;
+    background-color: #F59AA3;
     color: rgb(15, 90, 97);
 
     position: absolute;
@@ -52,7 +52,7 @@ body {
 }
 
 .main div.table table{
-    background-color: #F5564E; 
+    background-color: #34A7B2; 
     width: 100%;
     padding: 10px;
     font-size: 20px;
