--- a/style.css
+++ b/style.css
@@ -49,10 +49,11 @@ body {
 
 .main div.table {
     padding: 2%;
+    padding-left: 0%;
 }
 
 .main div.table caption {
-    background-color: #34A7B2; 
+     
 }
 
 .main div.table table{
