--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ body {
     background-color: #F5564E;
 }
 
-.header {
+header {
     background-color: #5B2E35;
     color: #F5E4C3;
     font-size: 14px;
