--- a/style.css
+++ b/style.css
@@ -12,20 +12,20 @@ main {
     background-color: #F59AA3;
     color: rgb(15, 90, 97);
 
-    position: absolute;
+    /* position: absolute;
     top: 8%;
    
     height: 91%;
-    width: 69%;
+    width: 69%; */
 }
 
 aside {
     background-color: #F5E4C3;
-    width: 29.3%;
+    /* width: 29.3%;
     height: 91%;
     position: absolute;
     left: 70%;
-    top: 8%;
+    top: 8%; */
 }
 
 aside table{
@@ -34,8 +34,7 @@ aside table{
     width: 95%;
     height: 92%;
     top: 1%;
-    
-}
+} 
 
 aside caption{
     color: #e21530;
@@ -49,9 +48,7 @@ aside td{
 }
 
 main nav.table {
-    padding: 2%;
-    padding-left: 0%;
-    padding-top: 0%;
+    
     font-variant: small-caps;
  
 }
@@ -63,16 +60,13 @@ main nav.table caption {
 
 main nav.table table{
     background-color: #34A7B2; 
-    width: 100%;
-    padding: 10px;
+    /* width: 100%; */
     font-size: 20px;
    
 }
 
 main nav.table td{
     background-color: #F5E4C3;
-    padding: 2%;
-    border-collapse: collapse;
     
 }
 
@@ -80,30 +74,30 @@ main nav.table td{
 body {
     display: grid;
     min-height: 100vh;
-    grid-template-columns: 200px 150px;
-    grid-template-rows: min-content 1fr min-content;
+    /* grid-template-columns: 200px 150px;
+    grid-template-rows: min-content min-content; */
   }
   header {
     grid-row: 1;
-    grid-column: 1 / 4;
+    grid-column: 1 / 3;
   }
-  nav {
+  /* nav {
     grid-row: 2;
     grid-column: 1 / 2;
     padding: 0 10px;
-  }
+  } */
   main {
     grid-row: 2;
-    grid-column: 2 / 3;
+    grid-column: 1/ 2;
     padding: 0 20px;
   }
   aside {
     grid-row: 2;
-    grid-column: 3 / 4;
+    grid-column: 2/3;
     padding: 0 10px;
   }
-  footer {
+  /* footer {
     grid-row: 3;
-    grid-column: 1 / 4;
+    grid-column: 1 / 3;
   }
-  
+   */
