--- a/style.css
+++ b/style.css
@@ -74,12 +74,13 @@ main nav.table td{
 body {
     display: grid;
     min-height: 100vh;
-    /* grid-template-columns: 200px 150px;
-    grid-template-rows: min-content min-content; */
+    /* grid-template-columns: 200px 150px; */
+    grid-template-rows: min-content min-content;
   }
   header {
     grid-row: 1;
     grid-column: 1 / 3;
+    height: 20%;
   }
   /* nav {
     grid-row: 2;
