--- a/style.css
+++ b/style.css
@@ -9,7 +9,8 @@ header {
 }
 
 main {
-    background-color: #F59AA3;
+    /* background-color: #F59AA3; */
+    background-color: green;
     color: rgb(15, 90, 97);
 
     /* position: absolute;
@@ -20,7 +21,8 @@ main {
 }
 
 aside {
-    background-color: #F5E4C3;
+    /* background-color: #F5E4C3; */
+    background-color: blueviolet;
     /* width: 29.3%;
     height: 91%;
     position: absolute;
@@ -34,6 +36,7 @@ aside table{
     width: 95%;
     height: 92%;
     top: 1%;
+    padding: 1%;
 } 
 
 aside caption{
@@ -71,16 +74,17 @@ main nav.table td{
 }
 
 /* GRID-BASED LAYOUT */
-body {
+/* body {
     display: grid;
     min-height: 100vh;
-    /* grid-template-columns: 200px 150px; */
+    grid-template-columns: 200px 1fr 150px;
     grid-template-rows: min-content min-content;
-  }
+  } */
   header {
     grid-row: 1;
     grid-column: 1 / 3;
     height: 20%;
+    grid-area: head;
   }
   /* nav {
     grid-row: 2;
@@ -91,14 +95,26 @@ body {
     grid-row: 2;
     grid-column: 1/ 2;
     padding: 0 20px;
+    grid-area: main;
   }
   aside {
     grid-row: 2;
     grid-column: 2/3;
     padding: 0 10px;
+    grid-area: aside;
   }
   /* footer {
     grid-row: 3;
     grid-column: 1 / 3;
   }
    */
+
+  body {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-auto-rows: minmax(100px, auto);
+    grid-template-areas: 
+      "head head head"
+      "main main aside"
+      "main main aside";
+  }
