--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 
 header {
-    background-color: #5B2E35;
+    background-color: #5B2E35; /* вот это вот почему не по размеру? */
     color: #F5E4C3;
     font-size: 14px;
 }
