--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-/* 
+
 header {
     background-color: #5B2E35; /* вот это вот почему не по размеру? */
     color: #F5E4C3;
@@ -118,4 +118,4 @@ main nav.table td{
       "head head head"
       "main main aside"
       "main main aside";
-  } */
+  }
