--- a/style.css
+++ b/style.css
@@ -1,38 +1,19 @@
 
 header {
-    background-color: #5B2E35; /* вот это вот почему не по размеру? */
-    color: #F5E4C3;
+    background-color: #5B2E35; 
     font-size: 14px;
-}
-
-header table{
-    /* background-color: #5B2E35; */
 }
 
 main {
     background-color: #F59AA3;
-    /* background-color: green; */
     color: rgb(15, 90, 97);
-
-    /* position: absolute;
-    top: 8%;
-   
-    height: 91%;
-    width: 69%; */
 }
 
 aside {
     background-color: #F5E4C3;
-    /* background-color: blueviolet; */
-    /* width: 29.3%;
-    height: 91%;
-    position: absolute;
-    left: 70%;
-    top: 8%; */
 }
 
 aside table{
-    
     left: 1%;
     width: 95%;
     height: 92%;
@@ -52,35 +33,23 @@ aside td{
 }
 
 main nav.table {
-    
     font-variant: small-caps;
- 
-}
+ }
 
 main nav.table caption {
      font-size: 30px;
-  
-}
+  }
 
 main nav.table table{
     background-color: #34A7B2; 
-    /* width: 100%; */
     font-size: 20px;
-   
 }
 
 main nav.table td{
     background-color: #F5E4C3;
-    
 }
 
 /* GRID-BASED LAYOUT */
-/* body {
-    display: grid;
-    min-height: 100vh;
-    grid-template-columns: 200px 1fr 150px;
-    grid-template-rows: min-content min-content;
-  } */
   header {
     grid-row: 1;
     grid-column: 1 / 4;
@@ -103,16 +72,10 @@ main nav.table td{
     padding: 0 10px;
     grid-area: aside;
   }
-  /* footer {
-    grid-row: 3;
-    grid-column: 1 / 3;
-  }
-   */
 
   body {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    /* grid-auto-rows: minmax(100px, auto); */
     grid-template-areas: 
       "head head head"
       "main main aside"
