--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
 header {
     background-color: #5B2E35; 
     font-size: 14px;
+    color: #F5E4C3;
 }
 
 main {
@@ -50,6 +51,16 @@ main nav.table td{
 }
 
 /* GRID-BASED LAYOUT */
+   body {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: 40px 1fr;
+    grid-template-areas: 
+      "head head head"
+      "main main aside";
+    
+  }
+
   header {
     grid-row: 1;
     grid-column: 1 / 4;
@@ -73,11 +84,6 @@ main nav.table td{
     grid-area: aside;
   }
 
-  body {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-template-areas: 
-      "head head head"
-      "main main aside"
-      "main main aside";
-  }
+ 
+
+ 
