--- a/style.css
+++ b/style.css
@@ -6,7 +6,8 @@ header {
 }
 
 main {
-    background-color: #F59AA3;
+    /* background-color: #F59AA3; */
+    background-color: #45da27;
     color: rgb(15, 90, 97);
 }
 
@@ -35,6 +36,7 @@ aside td{
 
 main nav.table {
     font-variant: small-caps;
+    padding: 20%;
  }
 
 main nav.table caption {
@@ -54,17 +56,16 @@ main nav.table td{
    body {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: 40px 1fr;
-    grid-template-areas: 
+    grid-template-rows: 40px auto;
+    /* grid-template-areas: 
       "head head head"
-      "main main aside";
+      "main main aside"; */
     
   }
 
   header {
-    grid-row: 1;
+    /* grid-area: head; */
     grid-column: 1 / 4;
-    grid-area: head;
   }
   /* nav {
     grid-row: 2;
@@ -72,16 +73,13 @@ main nav.table td{
     padding: 0 10px;
   } */
   main {
-    grid-row: 2;
-    grid-column: 1/ 3;
-    padding: 0 20px;
-    grid-area: main;
+    /* grid-area: main; */
+    grid-column: 1 / 3;
   }
   aside {
-    grid-row: 2;
-    grid-column: 3/4;
-    padding: 0 10px;
-    grid-area: aside;
+   
+    /* grid-area: aside; */
+    grid-column: 3 / 4;
   }
 
  
