--- a/style.css
+++ b/style.css
@@ -1,87 +1,28 @@
-
-header {
-    background-color: #5B2E35; 
-    font-size: 14px;
-    color: #F5E4C3;
+.container {
+  height: 100%;
+  display: grid;
+  grid-gap: 3px;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: 40px auto 40px;
+  grid-template-areas: 
+      "h h h"
+      "c c m"
+      "f f f";
 }
 
-main {
-    /* background-color: #F59AA3; */
-    background-color: #45da27;
-    color: rgb(15, 90, 97);
+.header {
+  grid-area: h;
 }
 
-aside {
-    background-color: #F5E4C3;
+.menu {
+  grid-area: m;
 }
 
-aside table{
-    left: 1%;
-    width: 95%;
-    height: 92%;
-    top: 1%;
-    padding: 1%;
-} 
-
-aside caption{
-    color: #e21530;
-    font-size: 30px;
+.content {
+  grid-area: c;
 }
 
-aside td{
-    border-bottom: 2px solid #da5a27;
-    color: #da5a27;
-    vertical-align: bottom;
+.footer {
+  grid-area: f;
 }
 
-main nav.table {
-    font-variant: small-caps;
-    padding: 20%;
- }
-
-main nav.table caption {
-     font-size: 30px;
-  }
-
-main nav.table table{
-    background-color: #34A7B2; 
-    font-size: 20px;
-}
-
-main nav.table td{
-    background-color: #F5E4C3;
-}
-
-/* GRID-BASED LAYOUT */
-   body {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: 40px auto;
-    /* grid-template-areas: 
-      "head head head"
-      "main main aside"; */
-    
-  }
-
-  header {
-    /* grid-area: head; */
-    grid-column: 1 / 4;
-  }
-  /* nav {
-    grid-row: 2;
-    grid-column: 1 / 2;
-    padding: 0 10px;
-  } */
-  main {
-    /* grid-area: main; */
-    grid-column: 1 / 3;
-  }
-  aside {
-   
-    /* grid-area: aside; */
-    grid-column: 3 / 4;
-  }
-
- 
-
- 
