--- a/basic.css
+++ b/basic.css
@@ -7,6 +7,7 @@ html, body {
   margin: 0px;
   font-family: 'Roboto';
   font-size: 30px;
+  height: 100%;
 }
 
 .container {
@@ -31,8 +32,17 @@ aside{
   height: 23%;
 }
 
+article {
+  height: auto;
+}
+
 article, nav {
   background-color: #FFFFFF;
+}
+
+footer 
+{
+  height:1.5em;
 }
 
 footer, header {
@@ -76,6 +86,7 @@ article.board {
   flex:0 0 auto;
   width: 100%;
   justify-content: space-around;
+  height: 5em;
 }
 
 .task--description{
@@ -87,6 +98,7 @@ article.board {
   flex: 4;
   background-color: #DBBBBA;
   color: #4D1510;
+  height: 1em;
   border-radius:20px;
   margin-bottom: 3%;
 }
@@ -95,6 +107,7 @@ article.board {
   flex: 1;
   background-color: #88B04B;
   border-radius:20px;
+  height:1.5em;
 }
 
 .task--countdown {
