--- a/basic.css
+++ b/basic.css
@@ -92,6 +92,7 @@ article.board {
 .task--description{
   display: flex;
   flex-flow: column nowrap;
+  width: 65%;
 }
 
 .task--name {
@@ -114,6 +115,7 @@ article.board {
   display: flex;
   flex-direction: column;
   align-items: center;
+  width: 20%;
   /* justify-content: center; */
   
 }
