--- a/basic.css
+++ b/basic.css
@@ -17,6 +17,21 @@ html, body {
   min-height: 100%
 }
 
+header {
+  font-size: 1.3rem;
+  display: flex;
+  flex-flow: row-reverse nowrap;
+  padding: 1em 2em 1em 0; 
+  height: 1.5rem;
+  background-color: #232931;
+  color: #F0ECE2;
+}
+
+header > div {
+  display: flex;
+  align-items: center;
+}
+
 aside{
   background:rgba(0,0,0,0.1); 
   background-image: url(https://cms-assets.tutsplus.com/uploads/users/33/posts/30712/image/Redpattern-min.jpg);
@@ -32,37 +47,6 @@ aside{
   height: 23%;
 }
 
-article {
-  height: 67%;
-}
-
-article, nav {
-  background-color: #FFFFFF;
-}
-
-footer 
-{
-  height:1.9em;
-}
-
-footer, header {
-  background-color: #232931;
-  color: #F0ECE2;
-}
-
-header {
-  font-size: 1.3rem;
-  display: flex;
-  flex-flow: row-reverse nowrap;
-  padding: 1em 2em 1em 0; 
-  height: 1.5rem;
-}
-
-header > div {
-  display: flex;
-  align-items: center;
-}
-
 aside > .caption {
   display: flex;
   flex: 0 0 auto;
@@ -70,6 +54,10 @@ aside > .caption {
   padding: 2em;
   width: 65%;
   border-radius: 20px;
+}
+
+article {
+  height: 67%;
 }
 
 article.board {
@@ -118,13 +106,8 @@ article.board {
   
 }
 
-.timeNumber {
-  flex:1;
-  color: #959D99;
-  display: flex;
-  flex-flow: column nowrap;
-  justify-content: center;
-  text-align: center;
-  /* margin-top: 40%; */
-  font-size: 1em;
+footer{
+  height:1.9em;
+  background-color: #232931;
+  color: #F0ECE2;
 }
