--- a/basic.css
+++ b/basic.css
@@ -9,6 +9,10 @@ html, body {
   height: 100%;
 }
 
+#line {
+  width: 100%;
+}
+
 .container {
   display: flex;
   flex-flow: column nowrap;
@@ -119,16 +123,17 @@ p {
 }
 
 .task--countdown {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  width: 25%;
-  justify-content: center;
-  color: rgb(163, 163, 163);
-  font-size: 1.7em;
-  font-family: Marion; 
+  font-size: 1.3rem;
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
   font-weight: bold;
+
+  display: flex;
+  flex-flow: row nowrap;
+  align-items: center;
+  justify-content: center;
+  width: 25%;
   
+  color: #666666;
 }
 
 footer{
